--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,11 @@ code[class*='language-'] {
 .custom-multiselect .p-multiselect-label {
   color: #888;
   padding: 4px;
+  font-size: 10px;
+}
+
+.p-datatable.p-datatable-sm .p-datatable-thead > tr > th{
+  padding: 0px 0px;
 }
 
 .custom-dropdown .p-dropdown-label {
@@ -48,18 +53,88 @@ code[class*='language-'] {
 
 }
 
-.p-multiselect-header{
+/* .p-multiselect-header{
  font-size: 10px;
  height: 20px;
-}
+} */
 
 .p-checkbox{
-  transform: scale(0.8);
+  transform: scale(0.5);
   display: inline-block
 }
 
 .p-multiselect-item{
-  padding: 2px 20px;
+  padding: 1px 1px;
   font-size: 10px;
 }
 
+.p-multiselect-panel .p-multiselect-header{
+  padding: 1px 1px;
+  font-size: 10px;
+  height: 30px;
+}
+
+.p-multiselect-panel .p-multiselect-header .p-multiselect-filter-container .p-inputtext {
+  padding-right: 1.75rem;
+  padding: 0px 1.75rem 0 0.2rem;
+  font-size: 10px;
+  height: 20px;
+}
+
+.p-multiselect-filter-container {
+  width: 110px;
+  
+}
+
+.p-multiselect-panel .p-multiselect-items .p-multiselect-empty-message {
+  text-align: center;
+  font-size: 10px;
+}
+
+.p-icon {
+  width: 0.6rem;
+  height: 0.6rem;
+}
+
+.p-multiselect-panel .p-multiselect-header .p-multiselect-filter-container .p-multiselect-filter-icon {
+  top: 0.8rem;
+}
+
+.p-datatable > .p-datatable-wrapper {
+  overflow: auto;
+  scrollbar-width: thin;
+  min-height: 50vh;
+}
+
+/* WebKit browsers */
+::-webkit-scrollbar {
+  width: 3px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Background color of the scrollbar track */
+  border-radius: 10px; /* Radius for the scrollbar track */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* Background color of the scrollbar thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Background color of the scrollbar thumb on hover */
+}
+
+
+.p-datatable .p-datatable-tbody > tr {
+  text-align: center;
+  font-size: 10px;
+}
+
+.css-1m0b7cl .react-datepicker .react-datepicker__month-container {
+  font-size: 10px;
+  padding-top: 0.8rem;
+}
+
+.css-1m0b7cl .react-datepicker .react-datepicker__current-month {
+  font-size: 10px;
+}
